# eric-api

./: .gitignore  Dockerfile  LICENSE  README.md  adapter.py  benchmark_main.py  bm.py  compose.yml  data_processing_example.py  eric_api.py  main.py  pyproject.toml  requirements.txt
docker/redis/: compose.yaml  redis.conf
docker/sse-api/: .eric-api.env  Dockerfile  compose.yml
e2e_tests/: run.py
