[project]
name = "eric-api"
version = "1.3.1.2"
description = "A Server side events based messaging microservice implementation"
keywords = ["sse", "api", "rest", "Server side events", "microservice", "messaging"]
readme = "README.md"
authors = [
    {name = "Luca Stretti",email = "laxertu@gmail.com"}
]


license = "MIT"
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sse-starlette (>=2.2.1,<3.0.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "eric-redis-queues (>=0.0.4.12,<0.0.7)",
    "eric-sse (>=0.7.6,<0.8.0)",
]

[project.urls]
Repository = "https://github.com/laxertu/eric-api"
Issues = "https://github.com/laxertu/eric-api/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]

